--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,4 +4,5 @@
 
 .panel {
     clip-path: polygon(15% 0, 100% 0%, 85% 100%, 0% 100%);
+    shape-outside: polygon(15% 0, 100% 0%, 85% 100%, 0% 100%);
 }
